[workspace]
members = [
    ".",
    "my_macros",
]
[package]
name = "antweb"
version = "0.1.0"
edition = "2024"

[dependencies]
my_macros = { path = "./my_macros" }
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["http2", "macros"] }
sea-query = "1.0.1"
sea-query-sqlx = { version = "0.9.1", features = ["sqlx-mysql"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.52.3", features = ["full"] }
validator = "0.20.0"
